// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifList /> GifList renders without crashing with elements 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GifList
    elements={
        Array [
            Object {
              "id": "XDXDXD1",
            },
            Object {
              "id": "XDXDXD2",
            },
            Object {
              "id": "XDXDXD3",
            },
          ]
    }
    handleSetGif={[Function]}
    handleToggleFav={[Function]}
    starred={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div
          span={2}
>
          <Gif
                    gif={
                              Object {
                                        "id": "XDXDXD1",
                                      }
                    }
                    onClickImage={[Function]}
                    onToggleFavorite={[Function]}
                    starred={false}
          />
</styled.div>,
        <styled.div
          span={2}
>
          <Gif
                    gif={
                              Object {
                                        "id": "XDXDXD2",
                                      }
                    }
                    onClickImage={[Function]}
                    onToggleFavorite={[Function]}
                    starred={false}
          />
</styled.div>,
        <styled.div
          span={2}
>
          <Gif
                    gif={
                              Object {
                                        "id": "XDXDXD3",
                                      }
                    }
                    onClickImage={[Function]}
                    onToggleFavorite={[Function]}
                    starred={false}
          />
</styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "gif_id_XDXDXD1",
        "nodeType": "class",
        "props": Object {
          "children": <Gif
            gif={
                        Object {
                                    "id": "XDXDXD1",
                                  }
            }
            onClickImage={[Function]}
            onToggleFavorite={[Function]}
            starred={false}
/>,
          "span": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "gif": Object {
              "id": "XDXDXD1",
            },
            "onClickImage": [Function],
            "onToggleFavorite": [Function],
            "starred": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "gif_id_XDXDXD2",
        "nodeType": "class",
        "props": Object {
          "children": <Gif
            gif={
                        Object {
                                    "id": "XDXDXD2",
                                  }
            }
            onClickImage={[Function]}
            onToggleFavorite={[Function]}
            starred={false}
/>,
          "span": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "gif": Object {
              "id": "XDXDXD2",
            },
            "onClickImage": [Function],
            "onToggleFavorite": [Function],
            "starred": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "gif_id_XDXDXD3",
        "nodeType": "class",
        "props": Object {
          "children": <Gif
            gif={
                        Object {
                                    "id": "XDXDXD3",
                                  }
            }
            onClickImage={[Function]}
            onToggleFavorite={[Function]}
            starred={false}
/>,
          "span": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "gif": Object {
              "id": "XDXDXD3",
            },
            "onClickImage": [Function],
            "onToggleFavorite": [Function],
            "starred": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            span={2}
>
            <Gif
                        gif={
                                    Object {
                                                "id": "XDXDXD1",
                                              }
                        }
                        onClickImage={[Function]}
                        onToggleFavorite={[Function]}
                        starred={false}
            />
</styled.div>,
          <styled.div
            span={2}
>
            <Gif
                        gif={
                                    Object {
                                                "id": "XDXDXD2",
                                              }
                        }
                        onClickImage={[Function]}
                        onToggleFavorite={[Function]}
                        starred={false}
            />
</styled.div>,
          <styled.div
            span={2}
>
            <Gif
                        gif={
                                    Object {
                                                "id": "XDXDXD3",
                                              }
                        }
                        onClickImage={[Function]}
                        onToggleFavorite={[Function]}
                        starred={false}
            />
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "gif_id_XDXDXD1",
          "nodeType": "class",
          "props": Object {
            "children": <Gif
              gif={
                            Object {
                                          "id": "XDXDXD1",
                                        }
              }
              onClickImage={[Function]}
              onToggleFavorite={[Function]}
              starred={false}
/>,
            "span": 2,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "gif": Object {
                "id": "XDXDXD1",
              },
              "onClickImage": [Function],
              "onToggleFavorite": [Function],
              "starred": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "gif_id_XDXDXD2",
          "nodeType": "class",
          "props": Object {
            "children": <Gif
              gif={
                            Object {
                                          "id": "XDXDXD2",
                                        }
              }
              onClickImage={[Function]}
              onToggleFavorite={[Function]}
              starred={false}
/>,
            "span": 2,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "gif": Object {
                "id": "XDXDXD2",
              },
              "onClickImage": [Function],
              "onToggleFavorite": [Function],
              "starred": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "gif_id_XDXDXD3",
          "nodeType": "class",
          "props": Object {
            "children": <Gif
              gif={
                            Object {
                                          "id": "XDXDXD3",
                                        }
              }
              onClickImage={[Function]}
              onToggleFavorite={[Function]}
              starred={false}
/>,
            "span": 2,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "gif": Object {
                "id": "XDXDXD3",
              },
              "onClickImage": [Function],
              "onToggleFavorite": [Function],
              "starred": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<GifList /> GifList renders without crashing with no elements 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GifList
    elements={Array []}
    handleSetGif={[Function]}
    handleToggleFav={[Function]}
    starred={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [],
    },
    "ref": null,
    "rendered": Array [],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [],
      },
      "ref": null,
      "rendered": Array [],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
